ADDED UNIQUE CONSTRAINT TO THE ITEMS ON A LIST feat: Made the app so that canot be duplicated items on a list
